# pykell

./: .gitignore  README.md  pyproject.toml
examples/: applicative.py  containers.py  functions.py  functors.py  monads.py  monoids.py  typeclasses.py
src/pykell/applicative/: __init__.py  applicative.py  lib.py
src/pykell/arrays/: __init__.py  array.py
src/pykell/functions/: __init__.py  function.py  lib.py
src/pykell/functors/: __init__.py  functor.py  lib.py
src/pykell/monads/: __init__.py  abstract.py  helpers.py  lib.py  list.py  maybe.py  monad.py  old_monad.py
src/pykell/monoids/: __init__.py  containers.py  lib.py  monoid.py
src/pykell/operators/: __init__.py  infix.py
src/pykell/typeclasses/: __init__.py  helpers.py  typeclass.py  typeclasses.py
src/pykell/typing/: __init__.py  containers.py  types.py
