[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "pykell"
version = "0.0.2"
authors = [
  { name="Guile Vieira", email="guilhermevmanhaes@gmail.com" },
]
description = "Python functional programming library inspired by Haskell."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/guilevieiram/pykell"
"Bug Tracker" = "https://github.com/guilevieiram/pykell/issues"


